# system

./: .gitignore  CMakeLists.txt  LICENSE  README.md  et
.github/workflows/: system.yml
doc/: .~lock.intel.ods#  intel.ods  work_contract.odt
scripts/: fetch_dependencies.cmake
src/: CMakeLists.txt
src/executable/: CMakeLists.txt
src/executable/baseline/: CMakeLists.txt  main.cpp
src/executable/benchmark/: CMakeLists.txt  main.cpp
src/executable/examples/: CMakeLists.txt  main.cpp
src/executable/examples/async_delete/: CMakeLists.txt  main.cpp  widget.h  widget_impl.cpp  widget_impl.h  widget_registry.cpp  widget_registry.h
src/executable/examples/blocking/: CMakeLists.txt  main.cpp
src/executable/examples/concurrent_even_number_counting/: CMakeLists.txt  main.cpp
src/executable/examples/continuation/: CMakeLists.txt  main.cpp
src/executable/examples/demo/: CMakeLists.txt  main.cpp
src/executable/examples/line_counting/: CMakeLists.txt  main.cpp
src/executable/examples/non_blocking/: CMakeLists.txt  main.cpp
src/executable/examples/repeated_execution/: CMakeLists.txt  main.cpp
src/executable/examples/shared_memory/: CMakeLists.txt  main.cpp
src/executable/examples/word_count/: CMakeLists.txt  main.cpp  packet_queue.h  word_stream.h
src/executable/mpmc_test/: CMakeLists.txt  main.cpp
src/executable/priority_work_contract_demo/: CMakeLists.txt  main.cpp
src/executable/work_contract_demo/: CMakeLists.txt  main.cpp
src/executable/work_contract_demo_2/: CMakeLists.txt  main.cpp
src/executable/work_contract_demo_3/: CMakeLists.txt  main.cpp
src/executable/work_contract_test/: CMakeLists.txt  main.cpp
src/include/: file_descriptor.h  io_mode.h  signal_tree.h  synchronization_mode.h
src/include/signal_tree/: helper.h  level.h  node.h  tree.h
